tests/negative/gold/prefixed_test.gold
tests/negative/prefixed_test.toit:6:9: error: Can't use prefix 'prefix' as an expression
  print prefix
        ^~~~~~
Compilation failed.
